# cs467-pico-testing

./: .gitignore  CMakeLists.txt  README.md  display.c  display.h  led_array.c  led_array.h  main.c  main_basic_test.c  pico_sdk_import.cmake  sensor.c  sensor.h
.devcontainer/: devcontainer.json
andrew-blink/: CMakeLists.txt  blink.c  ws2812.c  ws2812_parallel.c
bus_scan_test/: CMakeLists.txt  bus_scan.c  hello_world.c
